--- a/style.css
+++ b/style.css
@@ -1,17 +1,76 @@
-iframe {
+iframe,
+video {
   width: 100%;
   height: auto;
-
   aspect-ratio: 16 / 9;
+}
+img {
+  max-width: 100%;
+}
+
+h1 {
+  margin-inline-start: 20%;
+  color: rgb(255, 255, 255);
+  font-size: 2.5rem;
+  font-family: "Black Ops One", cursive;
 }
 
 * {
-  margin: 0.5%;
+  margin-inline-end: 4%;
+  margin-inline-start: 4%;
 }
 
-.video1,
-.video2 {
-  display: grid;
-  grid-column: 2;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+#first_section {
+  width: 100%;
+  height: 70vh;
+  background-image: url(baggrund.webp);
+  background-size: cover;
+  background-position: 100% 0%;
+}
+
+p,
+h3,
+h4 {
+  font-family: "Exo 2", sans-serif;
+}
+
+.videoer,
+#fourth_section,
+#second_section {
+  background-color: rgb(238, 238, 238);
+  padding: 3%;
+  border-radius: 0.5rem;
+  margin-block: 1rem;
+}
+
+@media (min-width: 650px) {
+  h1 {
+    margin-inline-start: 25%;
+    color: rgb(255, 255, 255);
+    font-size: 4rem;
+    font-family: "Black Ops One", cursive;
+  }
+  .video1,
+  .video2 {
+    display: grid;
+    padding-block: 1%;
+    grid-template-columns: 1fr 2fr;
+  }
+
+  #fourth_section,
+  #second_section {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    padding-block: 5%;
+    gap: 2%;
+  }
+}
+
+@media (min-width: 1000px) {
+  h1 {
+    margin-inline-start: 25%;
+    color: rgb(255, 255, 255);
+    font-size: 5rem;
+    font-family: "Black Ops One", cursive;
+  }
 }
